--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <p>“ The staff seem genuinely concerned about my progress which I find really refreshing. The program gave me the confidence necessary to be able to go out in the world and present myself as a capable junior developer. The standard is above the rest. You will get the personal attention you need from an incredible community of smart and amazing people. ”</p>
     </div>
 
-    <div class="white-big">
+    <div class="white white-big">
       <div class="profile">
         <img src="./images/image-kira.jpg" alt="image-kira">
         <div class="name">
